# resume-auto-fill

./: .gitignore  AGENTS.md  ANALYSIS.md  PRD.md  PROGRESS.md  README.md  aliases.yaml  profile_sample.yaml  pyenv-setup.md  pyproject.toml
resume_fill/: cli.py  formatter.py  loader.py  matcher.py  writer.py
