[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-fill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
]

[project.scripts]
resume-fill = "resume_fill.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["resume_fill"]
